--- a/Code/OrganizationOfData.DesktopClient/Properties/Resources.resx
+++ b/Code/OrganizationOfData.DesktopClient/Properties/Resources.resx
@@ -124,4 +124,10 @@
   <data name="ftn" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ftn.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="mikec" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\mikec.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="peca" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\peca.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
